@@ -1,5 +1,6 @@
 package pro.verron.officestamper.core;
 
+import org.docx4j.XmlUtils;
 import org.docx4j.openpackaging.packages.WordprocessingMLPackage;
 import org.docx4j.wml.Comments;
 import org.docx4j.wml.P;
@@ -11,16 +12,13 @@ import org.springframework.expression.spel.SpelParseException;
 import org.springframework.lang.Nullable;
 import pro.verron.officestamper.api.Comment;
 import pro.verron.officestamper.api.CommentProcessor;
-import pro.verron.officestamper.api.OfficeStamperException;
 
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 
 import static pro.verron.officestamper.core.CommentUtil.getCommentString;
 import static pro.verron.officestamper.core.CommentUtil.getComments;
+import static pro.verron.officestamper.core.ExceptionUtil.treatException;
 
 /**
  * Allows registration of {@link CommentProcessor} objects. Each registered
@@ -36,7 +34,6 @@ import static pro.verron.officestamper.core.CommentUtil.getComments;
 public class CommentProcessorRegistry {
 
     private static final Logger logger = LoggerFactory.getLogger(CommentProcessorRegistry.class);
-
     private final Map<Class<?>, Object> commentProcessors;
     private final boolean failOnUnresolvedExpression;
     private final ExpressionResolver expressionResolver;
@@ -74,19 +71,24 @@ public class CommentProcessorRegistry {
         var comments = getComments(document);
         var proceedComments = new ArrayList<Comment>();
 
-        new BaseCoordinatesWalker() {
-            @Override protected void onRun(R run, P paragraph) {
-                runProcessorsOnRunComment(document, comments, expressionContext, paragraph, run)
-                        .ifPresent(proceedComments::add);
-            }
+        DocumentUtil.streamParagraphs(document)
+                    .map(P::getContent)
+                    .flatMap(List::stream)
+                    .map(XmlUtils::unwrap)
+                    .filter(R.class::isInstance)
+                    .map(R.class::cast)
+                    .forEach(run -> runProcessorsOnRunComment(document, comments, expressionContext, run)
+                            .ifPresent(proceedComments::add));
+        // we run the paragraph afterward so that the comments inside work before the whole paragraph comments
+        DocumentUtil.streamParagraphs(document)
+                    .forEach(paragraph -> runProcessorsOnParagraphComment(document,
+                            comments,
+                            expressionContext,
+                            paragraph)
+                            .ifPresent(proceedComments::add));
 
-            @Override protected void onParagraph(P paragraph) {
-                runProcessorsOnParagraphComment(document, comments, expressionContext, paragraph)
-                        .ifPresent(proceedComments::add);
-                runProcessorsOnInlineContent(expressionContext, paragraph);
-            }
-
-        }.walk(document);
+        DocumentUtil.streamParagraphs(document)
+                    .forEach(paragraph -> runProcessorsOnInlineContent(expressionContext, paragraph));
 
         for (Object processor : commentProcessors.values()) {
             ((CommentProcessor) processor).commitChanges(document);
@@ -100,12 +102,11 @@ public class CommentProcessorRegistry {
             WordprocessingMLPackage document,
             Map<BigInteger, Comment> comments,
             T expressionContext,
-            P paragraph,
             R run
     ) {
         return CommentUtil
                 .getCommentAround(run, document)
-                .flatMap(c -> runCommentProcessors(comments, expressionContext, c, paragraph, run));
+                .flatMap(c -> runCommentProcessors(comments, expressionContext, c, (P) run.getParent(), run));
     }
 
     /**
@@ -134,42 +135,35 @@ public class CommentProcessorRegistry {
      * Finds all processor expressions within the specified paragraph and tries
      * to evaluate it against all registered {@link CommentProcessor}s.
      *
-     * @param expressionContext a builder for a proxy around the context root object to customize its interface
-     * @param paragraph         the paragraph to process.
-     * @param <T>               type of the context root object
+     * @param context   the context root object against which evaluation is done
+     * @param paragraph the paragraph to process.
+     * @param <T>       type of the context root object
      */
-    private <T> void runProcessorsOnInlineContent(
-            T expressionContext, P paragraph
-    ) {
+    private <T> void runProcessorsOnInlineContent(T context, P paragraph) {
         var paragraphWrapper = new StandardParagraph(paragraph);
-        String text = paragraphWrapper.asString();
-        var expressions = Placeholders.findProcessors(text);
+        var text = paragraphWrapper.asString();
+        var placeholders = Placeholders.findProcessors(text);
 
-        for (var expression : expressions) {
+        for (var placeholder : placeholders) {
             for (final Object processor : commentProcessors.values()) {
                 ((CommentProcessor) processor).setParagraph(paragraph);
             }
 
             try {
-                expressionResolver.resolve(expression, expressionContext);
-                paragraphWrapper.replace(expression, RunUtil.create(""));
-                logger.debug("Processor expression '{}' has been successfully processed by a comment processor.",
-                        expression);
+                expressionResolver.setContext(context);
+                expressionResolver.resolve(placeholder);
+                paragraphWrapper.replace(placeholder, RunUtil.create(""));
+                logger.debug("Placeholder '{}' successfully processed by a comment processor.", placeholder);
             } catch (SpelEvaluationException | SpelParseException e) {
-                String msg = "Expression '%s' failed since no processor solves it".formatted(expression);
-                if (failOnUnresolvedExpression) {
-                    throw new OfficeStamperException(msg, e);
-                }
-                else {
-                    logger.warn(msg, e);
-                }
+                var msg = "Placeholder '%s' failed to process.".formatted(placeholder);
+                treatException(e, failOnUnresolvedExpression, msg);
             }
         }
     }
 
     private <T> Optional<Comment> runCommentProcessors(
             Map<BigInteger, Comment> comments,
-            T expressionContext,
+            T context,
             Comments.Comment comment,
             P paragraph,
             @Nullable R run
@@ -181,7 +175,7 @@ public class CommentProcessorRegistry {
             return Optional.empty();
         }
 
-        var commentExpression = getCommentString(comment);
+        var placeholder = getCommentString(comment);
 
         for (final Object processor : commentProcessors.values()) {
             ((CommentProcessor) processor).setParagraph(paragraph);
@@ -190,24 +184,16 @@ public class CommentProcessorRegistry {
         }
 
         try {
-            expressionResolver.resolve(commentExpression, expressionContext);
+            expressionResolver.setContext(context);
+            expressionResolver.resolve(placeholder);
             comments.remove(comment.getId());
-            logger.debug("Comment {} has been successfully processed by a comment processor.", commentExpression);
+            logger.debug("Comment '{}' successfully processed by a comment processor.", placeholder);
             return Optional.of(commentWrapper);
         } catch (SpelEvaluationException | SpelParseException e) {
-            if (failOnUnresolvedExpression) {
-                throw new OfficeStamperException(commentExpression.toString(), e);
-            }
-            else {
-                logger.warn(String.format(
-                        "Skipping comment expression '%s' because it can not be resolved by any comment processor. "
-                                + "Reason: %s. Set log level to TRACE to view Stacktrace.",
-                        commentExpression,
-                        e.getMessage()));
-                logger.trace("Reason for skipping comment: ", e);
-            }
+            var msg = "Comment '%s' failed to process.".formatted(placeholder);
+            treatException(e, failOnUnresolvedExpression, msg);
+            return Optional.empty();
         }
-        return Optional.empty();
     }
 
     /**
